--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
   </properties>
 
   <dependencies>
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-deploy-plugin</artifactId>
+    <version>3.0.0-M1</version>
+ </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -76,18 +81,28 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+	<plugin>
+   <artifactId>maven-deploy-plugin</artifactId>
+   <version>2.8.1</version>
+   <executions>
+      <execution>
+         <id>default-deploy</id>
+         <phase>deploy</phase>
+         <goals>
+            <goal>deploy</goal>
+         </goals>
+      </execution>
+   </executions>
+</plugin>
+
       </plugins>
     </pluginManagement>
   </build>
   <distributionManagement>
-    <repository>
-      <id>deploymentr</id>
-      <url>http://35.232.95.3:8081/repository/SAMPLE-REL/</url>
-    </repository>
-    
-    <snapshotRepository>
-      <id>deployments</id>
-      <url>http://35.232.95.3:8081/repository/SAMPLE-SNAP/</url>
-    </snapshotRepository>
-  </distributionManagement>
+ 
+<snapshotRepository>
+      <id>nexus</id>
+      <url>http://18.222.113.248:8081/repository/MAVEN_NEXUS/</url>
+   </snapshotRepository> 
+ </distributionManagement>
 </project>
