--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,7 @@
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
+        
         <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
@@ -73,18 +70,27 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+   <artifactId>maven-deploy-plugin</artifactId>
+   <version>2.8.1</version>
+   <executions>
+      <execution>
+         <id>default-deploy</id>
+         <phase>deploy</phase>
+         <goals>
+            <goal>deploy</goal>
+         </goals>
+      </execution>
+   </executions>
+</plugin>
       </plugins>
     </pluginManagement>
   </build>
   <distributionManagement>
-    <repository>
-      <id>deploymentr</id>
-      <url>http://35.232.95.3:8081/repository/SAMPLE-REL/</url>
-    </repository>
     
     <snapshotRepository>
-      <id>deployments</id>
-      <url>http://35.232.95.3:8081/repository/SAMPLE-SNAP/</url>
+      <id>nexus</id>
+      <url>http://13.59.160.94:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 </project>
