--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 <dependency>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-deploy-plugin</artifactId>
-    <version>3.0.0-M1</version>
+    <version>2.8.1</version>
  </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -96,7 +96,7 @@
   <distributionManagement>    
     <snapshotRepository>
       <id>nexus</id>
-      <url>http://13.59.160.94:8081/repository/maven-snapshots/</url>
+      <url>http://3.133.130.98:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
 
